--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -982,6 +982,11 @@ figure {
   margin-bottom: 1em;
 }
 
+.main-title {
+  font-size: 2.44rem;
+  margin-bottom: 1em;
+}
+
 .theme-title {
   font-size: 1.2rem;
 }
