--- a/_includes/algolia.html
+++ b/_includes/algolia.html
@@ -24,22 +24,38 @@ search.addWidget(
 );
 
 search.addWidget(
+  instantsearch.widgets.stats({
+    container: '#stats-container'
+  })
+);
+
+search.addWidget(
   instantsearch.widgets.hits({
     container: '#search-hits',
     templates: {
-      empty: 'Sorry, no corresponding plugin found…',
+      empty: 'No plugin was found',
       item: function(hit) {
-        const title = hit._highlightResult.title.value.toLowerCase();
+        const title = hit._highlightResult.title.value;
+
         return `
-          <a href="{{site.baseurl}}${hit.url}">${hit.title}</a>
+          <a href="{{site.baseurl}}${hit.url}">${title}</a>
           <span class="ais-hits-link-github"><a title="GitHub repository of ${hit.title}" href="${hit.repository}">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512"><path d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"/></svg>
           </a></span>
-          <br /> by ${hit.author}
-
+          <p class="ais-hits-author">
+          <a href="https://github.com/${hit.author}"><img class="ais-hits-author-avatar" src="https://github.com/${hit.author}.png" width="24px" />${hit.author}</a>
+          </p>
+          <p class="ais-hits-description">${hit._highlightResult.description.value}</p>
         `;
       }
     }
+  })
+);
+
+search.addWidget(
+  instantsearch.widgets.pagination({
+    container: '#pagination-container',
+    maxPages: 7,
   })
 );
 
@@ -52,18 +68,32 @@ search.start();
   text-align: center;
 }
 
-.ais-search-box {
-  max-width: 80%;
+#stats-container {
+  margin-bottom: 2em;
 }
 
+.ais-stats {
+  color: #ddd;
+}
+
+.ais-search-box {
+  max-width: 100%;
+  font-size: 1.2rem;
+}
+
+.ais-search-box--powered-by {
+  font-size: .85rem;
+}
 .ais-hits {
-    display:grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-gap: 1em;
+}
+
+.ais-hits-author,
+.ais-hits-description {
+  font-size: .85em;
 }
 
 .ais-hits--item {
-  padding: 0 0 .5em 0;
+  padding: .5em 0;
   border-bottom: 1px dotted #5a5a5a;
 }
 
@@ -83,6 +113,46 @@ search.start();
 
 .ais-hits-link-github svg {
     fill: currentColor;
+}
+
+.ais-Highlight {
+  color: #fff;
+  text-decoration: underline;
+  font-style: normal;
+}
+
+#pagination-container {
+  text-align: center;
+}
+.ais-pagination {
+  background: none;
+  border: none;
+}
+
+.ais-pagination--item {
+  font-size: .85em;
+}
+
+.ais-pagination--item__active {
+  background-color: #fc0;
+}
+
+.ais-pagination--item__active .ais-pagination--link {
+  color: #222;
+}
+.ais-pagination--link {
+  color: #fff;
+}
+.ais-pagination--item:hover {
+  background: rgba(34,34,0,.1);
+}
+
+.ais-pagination--link:hover {
+  color: #fc0;
+}
+
+.ais-pagination--item__active:hover {
+  background: rgba(255,204,0,.1);
 }
 
 </style>
