--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -7,10 +7,7 @@ layout: default
 
       <div class="unit whole">
         <article>
-          <div class="improve right hide-on-mobiles">
-            <a href="{{ site.repository }}/edit/master/{{ page.relative_path | default: page.path }}"><i class="fa fa-pencil"></i> &nbsp;Improve this page</a>
-          </div>
-          <h1>{{ page.title }}</h1>
+          <h1 class="main-title">{{ page.title }}</h1>
           {{ content }}
         </article>
       </div>
