--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,7 @@
 
   {% include footer.html %}
 
+  <script async defer src="https://buttons.github.io/buttons.js"></script>
   {% if jekyll.env == production %}
     {% include analytics.html %}
   {% endif %}
